Version 6.0 alpha: (01 Mar 2004)
	* plugins/recap.pl:
	   - Added all the remaining events to recap: channel modes, quit,
	     join, part, and nick changes.
	* simbot.pl:
	   - Added an event for nick changes, since we needed it for recap.

Version 6.0 alpha: (28 Feb 2004)
	* plugins/rss.pl:
	   - Announce preselected RSS feeds in the IRC channel.  This is
	     nifty if your channel is slow.  We announce a number of feeds by
	     default, including slashdot, and developer personal feeds, which
	     are probably boring.

Version 6.0 alpha: (27 Feb 2004)
	* *.pl:
	   - All files now use perl's strict mode, which should mean our code
	     is absolutely perfect. :P
	* simbot.pl:
	   - We now support the %delete command which will remove any item from
	     the database provided it has been seen fewer than the max number
	     as specified in the config file.
	* config.default.ini:
	   - We now use a plain text file (not a script file) for configuration
	     this is safer because no one can break the bot by putting bad
	     code in the config file.
	* plugins/error.pl:
	   - the %list command is now in the error plugin instead of directly
	     inside the main script.

Version 6.0 alpha: (26 Feb 2004)
	* simbot.pl:
	   - Added a new configuration option that allows you to change the
	     prefix that the bot will use to recognize commands.  The default
	     will remain as %.
	* plugins/dice.pl:
	   - It is now possible to flip more than 1 coin at a time.

Version 6.0 alpha: (25 Feb 2004)
	* simbot.pl:
	   - Plugins now register their callbacks with references to functions
	     instead of a string representing the functions name.  This keeps
	     us from having to care about what package the plugin is in, so
	     long as it's got a function we can talk to, and we no longer
	     need to define separate packages for separate commands in a
	     single plugin.

Version 6.0 alpha: (23 Feb 2004)
	* plugins/info.pl: